# Pac-Man

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
assets/maps/: map1.txt  map2.txt  map3.txt  map4.txt
logic/: CMakeLists.txt
logic/include/: AbstractFactory.cpp  AbstractFactory.h
logic/include/core/: HighScore.h  Observer.h  Random.h  Score.h  Stopwatch.h  Subject.h
logic/include/entities/: Coin.h  Collectable.h  DynamicEntity.h  EntityModel.h  Fruit.h  Ghost.h  PacMan.h  Wall.h
logic/include/world/: World.h
logic/src/core/: Score.cpp  Stopwatch.cpp
logic/src/entities/: Ghost.cpp
logic/src/world/: World.cpp
representation/: CMakeLists.txt
representation/include/: Camera.h  ConcreteFactory.h  Game.h
representation/include/states/: GameOver.h  LevelState.h  MenuState.h  State.h  StateManager.h  VictoryState.h
representation/include/views/: EntityView.h  GhostView.h  LivesView.h  PacmanView.h  ScoreView.h
representation/src/: Camera.cpp  ConcreteFactory.cpp  Game.cpp
representation/src/states/: GameOver.cpp  LevelState.cpp  MenuState.cpp  StateManager.cpp  VictoryState.cpp
src/: main.cpp
